$Id$

*** Note: Please add new entries to the top of this file. ***
-------------------------------------------------------------------------------
- patch setkey for bin/147887 (gives 'invalid extension')

- fix empty 6RD patch, and fixup stage 4 

- add 6RD patch to stf from http://people.allbsd.org/~hrs/FreeBSD/stf_6rd_20100923-1.diff
  no code yet to utilitse 6RD in m0n0wall

- change locking for filter_reconfigure() ,and ipv4 only option

- move amd64 kernel to a conf instead of patch (easier to maintain)

- add aesni crypto device for Xeon Processor AES offload as kernel module 
  and move glxsb padlock and aesni to modules. Fix crypto regex in index.php

- make rc.newwanip6 have file lock and only reconfig ipv6 rules

- update kernel for amd64, remove non amd64 devices and build in acpi

- fixup go.sh to find svn (yet again !)

- amd64 builds;
  now use wol from ports (amd64 fails to compile in previous method)
  ipf path removed ref to i386, kernel build removed i386 from path 
  patch kernel to make amd64 if uname -m is amd64
  append amd64 to image names

- change dhcp-pd to be /64 by default

- fixup go.sh to find svn (again) and stage 2 to use tmp for php and minihttpd
  and stage 5 mfsroot for iso filename change

- move system version number to file <repo>/version

- fix DHCPv6 server wouldn't start

- circumvent shaper and captive portal for IPv6 for the time being, since it
  doesn't work properly (dummynet IPv6 support is broken, and captive portal
  has no explicit support for it). This gives CP users the option to either
  simply not configure v6 on the CP interface, or to configure it and have
  IPv6 traffic pass regardless of whether the client is authenticated.

- fix copy&paste bugs surrounding ipv6ramtu and make it optional

- remove ipfw.ko dependency on libalias.ko

- take port options out of .tgz for easier maintenance

- remove stray "nat_iterator" printf from ipnat

- remove ip_input/dummynet/mbuf patches; dummynet + bridging appears